[gd_scene load_steps=21 format=3 uid="uid://sxehq5ji44xm"]

[ext_resource type="Script" path="res://scripts/inventory.gd" id="1_g2hi5"]
[ext_resource type="Texture2D" uid="uid://c0rntsul0u3x4" path="res://assets/inventory/inventory_frame.png" id="1_y1dyy"]
[ext_resource type="Texture2D" uid="uid://dxjr7xsuy055w" path="res://assets/inventory/soul.png" id="2_nyv6j"]
[ext_resource type="Texture2D" uid="uid://d0m8umnaq3vwk" path="res://assets/inventory/sould_hover.png" id="3_wsm84"]
[ext_resource type="Texture2D" uid="uid://bx1vehwqfwt4e" path="res://assets/inventory/inventory.png" id="4_k6dnk"]
[ext_resource type="Texture2D" uid="uid://dyy3v3m7okwvh" path="res://assets/inventory/inventory_hover.png" id="5_u0pma"]
[ext_resource type="Texture2D" uid="uid://bq4vht3ts2avk" path="res://assets/inventory/quit_bigger.png" id="6_s8scw"]
[ext_resource type="Texture2D" uid="uid://eepycb27dr8x" path="res://assets/inventory/quit_bigger_hover.png" id="7_n4dys"]
[ext_resource type="Texture2D" uid="uid://ye0kpsgym586" path="res://assets/inventory/frame_kozetsu_bigger.png" id="9_hhqae"]
[ext_resource type="Texture2D" uid="uid://bvhnrj63o8vr3" path="res://assets/inventory/dream_eye/dream_eye.png" id="10_ymfx7"]
[ext_resource type="FontFile" uid="uid://lx0uvqrmjjg6" path="res://assets/retro_gaming.ttf" id="11_b2qpm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nt2w2"]
atlas = ExtResource("10_ymfx7")
region = Rect2(110, 0, 22, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3p20"]
atlas = ExtResource("10_ymfx7")
region = Rect2(66, 0, 22, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_4h64q"]
atlas = ExtResource("10_ymfx7")
region = Rect2(44, 0, 22, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_wyap8"]
atlas = ExtResource("10_ymfx7")
region = Rect2(88, 0, 22, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbd7p"]
atlas = ExtResource("10_ymfx7")
region = Rect2(132, 0, 22, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_grpb2"]
atlas = ExtResource("10_ymfx7")
region = Rect2(22, 0, 22, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_raisi"]
atlas = ExtResource("10_ymfx7")
region = Rect2(154, 0, 22, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhvp1"]
atlas = ExtResource("10_ymfx7")
region = Rect2(0, 0, 22, 12)

[sub_resource type="SpriteFrames" id="SpriteFrames_vqhau"]
animations = [{
"frames": [{
"duration": 25.0,
"texture": SubResource("AtlasTexture_nt2w2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3p20")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4h64q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wyap8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbd7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_grpb2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_raisi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhvp1")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[node name="inventory" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g2hi5")

[node name="InventoryLayer" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="InventoryLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="InventoryFrame" type="Sprite2D" parent="InventoryLayer"]
position = Vector2(576, 326)
scale = Vector2(4.608, 5.192)
texture = ExtResource("1_y1dyy")

[node name="Buttons" type="VBoxContainer" parent="InventoryLayer"]
offset_left = 29.0
offset_top = 26.0
offset_right = 93.0
offset_bottom = 130.0
scale = Vector2(3, 3)

[node name="Soul" type="TextureButton" parent="InventoryLayer/Buttons"]
layout_mode = 2
mouse_filter = 2
button_mask = 0
texture_normal = ExtResource("2_nyv6j")
texture_hover = ExtResource("3_wsm84")

[node name="Inventory" type="TextureButton" parent="InventoryLayer/Buttons"]
layout_mode = 2
mouse_filter = 2
button_mask = 0
texture_normal = ExtResource("4_k6dnk")
texture_hover = ExtResource("5_u0pma")

[node name="Quit" type="TextureButton" parent="InventoryLayer/Buttons"]
layout_mode = 2
mouse_filter = 2
button_mask = 0
texture_normal = ExtResource("6_s8scw")
texture_hover = ExtResource("7_n4dys")

[node name="SoulChoosed" type="CanvasLayer" parent="InventoryLayer"]
visible = false

[node name="FrameKozetsuBigger" type="Sprite2D" parent="InventoryLayer/SoulChoosed"]
position = Vector2(423, 177)
texture = ExtResource("9_hhqae")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="InventoryLayer/SoulChoosed"]
position = Vector2(422, 178)
scale = Vector2(8, 8)
sprite_frames = SubResource("SpriteFrames_vqhau")
autoplay = "default"
frame_progress = 0.165736

[node name="SoulLabel" type="Label" parent="InventoryLayer/SoulChoosed"]
offset_left = 609.0
offset_top = 53.0
offset_right = 690.0
offset_bottom = 92.0
theme_override_colors/font_color = Color(0.435294, 0.192157, 0.596078, 1)
theme_override_fonts/font = ExtResource("11_b2qpm")
theme_override_font_sizes/font_size = 30
text = "Soul"

[node name="LVLabel" type="Label" parent="InventoryLayer/SoulChoosed"]
offset_left = 614.0
offset_top = 112.0
offset_right = 654.0
offset_bottom = 135.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_fonts/font = ExtResource("11_b2qpm")
text = "LV:"

[node name="HPLabel" type="Label" parent="InventoryLayer/SoulChoosed"]
offset_left = 614.0
offset_top = 150.0
offset_right = 670.0
offset_bottom = 173.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_fonts/font = ExtResource("11_b2qpm")
text = "HP:
"

[node name="ATLabel" type="Label" parent="InventoryLayer/SoulChoosed"]
offset_left = 614.0
offset_top = 224.0
offset_right = 668.0
offset_bottom = 247.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_fonts/font = ExtResource("11_b2qpm")
text = "AT:
"

[node name="XPLabel" type="Label" parent="InventoryLayer/SoulChoosed"]
offset_left = 614.0
offset_top = 187.0
offset_right = 668.0
offset_bottom = 210.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_fonts/font = ExtResource("11_b2qpm")
text = "XP:
"

[node name="Equipped" type="Sprite2D" parent="InventoryLayer/SoulChoosed"]
position = Vector2(388, 551)
scale = Vector2(3, 3)

[node name="InventoryChoosed" type="CanvasLayer" parent="InventoryLayer"]
visible = false

[node name="first" type="TextureButton" parent="InventoryLayer/InventoryChoosed"]
offset_left = 305.0
offset_top = 76.0
offset_right = 369.0
offset_bottom = 116.0
scale = Vector2(3, 3)
mouse_filter = 1
disabled = true

[node name="second" type="TextureButton" parent="InventoryLayer/InventoryChoosed"]
offset_left = 571.0
offset_top = 77.0
offset_right = 635.0
offset_bottom = 117.0
scale = Vector2(3, 3)
disabled = true

[connection signal="pressed" from="InventoryLayer/Buttons/Soul" to="." method="_on_soul_pressed"]
[connection signal="pressed" from="InventoryLayer/Buttons/Inventory" to="." method="_on_inventory_pressed"]
[connection signal="pressed" from="InventoryLayer/Buttons/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="InventoryLayer/InventoryChoosed/first" to="." method="_on_first_pressed"]
[connection signal="pressed" from="InventoryLayer/InventoryChoosed/second" to="." method="_on_second_pressed"]
